fixed bug with z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -300,7 +300,7 @@ img {
 }
 
 .background {
-  z-index: -1;
+  z-index: 0;
   min-height: 100vh;
   background-size: 30rem;
   position: relative;
